<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="hello">Hello World, CustomLayoutProjectActivity!
	</string>
	<string name="app_name">CustomLayoutProject</string>
	<string name="button_1">First Button</string>
	<string name="button_2">Second Button</string>
	<string name="button_3">Third Button</string>
	<string name="button_4">Forth Button</string>
	<string name="button_5">Fifth Button</string>
	<string name="button_6">Sixth Button</string>
	<string name="button_7">Seventh Button</string>

</resources>
